fix: scroll list && spacings

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -2,6 +2,8 @@
 
 .about {
   &__features {
-    margin-block-start: clamp(250px, 35vh, 400px);
+    @media (min-width: $breakpoint-desktop) {
+      margin-block-start: clamp(250px, 35vh, 400px);
+    }
   }
 }
